Make sure dependencies are listed in POM
From https://docs.gradle.org/current/dsl/org.gradle.api.publish.maven.MavenPublication.html#org.gradle.api.publish.maven.MavenPublication

--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,7 @@ ext {
 publishing {
     publications {
         Release(MavenPublication) {
+            from components.java
             groupId 'ch.poole'
             artifactId 'OpeningHoursParser'
             artifact jar
